--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "> 1%",
     "iOS 7",
     "last 3 iOS versions"
-  ]
+  ],
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0-9",
+    "bootstrap": "^5.1.3",
+    "glightbox": "^3.1.0",
+    "tiny-slider": "^2.9.4"
+  }
 }
