--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0-9",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "glightbox": "^3.1.0",
-    "tiny-slider": "^2.9.4"
+    "tiny-slider": "^2.9.4",
+    "wowjs": "^1.1.3"
   }
 }
